# qatlib

./: .gitignore  INSTALL  LICENSE  Makefile.am  README.md  SECURITY.md  Samples.am  autogen.sh  configure.ac  cpa_sample_code.7  filelist  libqat.pc.in  libusdm.pc.in  qat_init.sh.8  qatlib.pc.in  qatlib.spec.in  qatlib.sysusers.conf  qatmgr.8  versionfile
.github/: dependabot.yml
.github/workflows/: codeql.yml  linux_build_gcc.yml  scorecards.yml
quickassist/include/: cpa.h  cpa_dev.h  cpa_types.h
quickassist/include/dc/: cpa_dc.h  cpa_dc_bp.h  cpa_dc_capabilities.h  cpa_dc_chain.h  cpa_dc_dp.h
quickassist/include/lac/: cpa_cy_common.h  cpa_cy_dh.h  cpa_cy_drbg.h  cpa_cy_dsa.h  cpa_cy_ec.h  cpa_cy_ecdh.h  cpa_cy_ecdsa.h  cpa_cy_ecsm2.h  cpa_cy_im.h  cpa_cy_key.h  cpa_cy_kpt.h  cpa_cy_ln.h  cpa_cy_nrbg.h  cpa_cy_prime.h  cpa_cy_rsa.h  cpa_cy_sym.h  cpa_cy_sym_dp.h
quickassist/include/rl/: cpa_rl.h
quickassist/lookaside/access_layer/include/: adf_kernel_types.h  icp_accel_devices.h  icp_adf_accel_mgr.h  icp_adf_cfg.h  icp_adf_debug.h  icp_adf_init.h  icp_adf_poll.h  icp_adf_transport.h  icp_adf_transport_dp.h  icp_adf_user_proxy.h  icp_buffer_desc.h  icp_sal.h  icp_sal_congestion_mgmt.h  icp_sal_iommu.h  icp_sal_poll.h  icp_sal_user.h  icp_sal_versions.h  qat_library_version.h
quickassist/lookaside/access_layer/src/common/compression/: crc32_gzip_refl_by8.S  crc64_ecma_norm_by8.S  dc_buffers.c  dc_capabilities.c  dc_chain.c  dc_crc32.c  dc_crc64.c  dc_crc_base.c  dc_datapath.c  dc_dictionary.c  dc_dp.c  dc_err_sim.c  dc_header_footer.c  dc_header_footer_lz4.c  dc_ns_datapath.c  dc_ns_header_footer.c  dc_session.c  dc_stats.c  dc_xxhash32.c  icp_sal_dc_err_sim.c  reg_sizes.asm
quickassist/lookaside/access_layer/src/common/compression/include/: dc_capabilities.h  dc_chain.h  (+11 more)
quickassist/lookaside/access_layer/src/common/ctrl/: sal_compression.c  sal_compression_capabilities.c  sal_create_services.c  sal_crypto.c  sal_ctrl_services.c  sal_dc_chain.c  sal_instances.c  sal_list.c  sal_resp_type.c  sal_rl_stubs.c
quickassist/lookaside/access_layer/src/common/device/: sal_dev_info.c
quickassist/lookaside/access_layer/src/common/include/: lac_buffer_desc.h  lac_common.h  lac_hooks.h  lac_list.h  lac_log.h  lac_mem.h  lac_mem_pools.h  lac_module.h  lac_sal.h  lac_sal_ctrl.h  lac_sal_types.h  lac_sal_types_crypto.h  lac_sw_responses.h  lac_sync.h  lac_version.h  sal_instances.h  sal_misc_error_stats.h  sal_qat_cmn_msg.h  sal_service_state.h  sal_statistics.h  sal_string_parse.h  sal_types_compression.h  sal_types_patternmatch.h
quickassist/lookaside/access_layer/src/common/qat_comms/: sal_qat_cmn_msg.c
quickassist/lookaside/access_layer/src/common/utils/: lac_buffer_desc.c  lac_lock_free_stack.h  lac_log_message.c  lac_mem.c  lac_mem_pools.c  lac_sw_responses.c  lac_sync.c  sal_misc_error_stats.c  sal_service_state.c  sal_statistics.c  sal_string_parse.c  sal_user_process.c  sal_versions.c
quickassist/lookaside/access_layer/src/qat_direct/common/: adf_process_proxy.c  adf_user_ETring_mgr_dp.c  adf_user_cfg.c  adf_user_device.c  adf_user_dyn.c  adf_user_init.c  adf_user_ring.c  adf_user_transport_ctrl.c
quickassist/lookaside/access_layer/src/qat_direct/include/: adf.h  adf_dev_ring_ctl.h  adf_devmgr.h  adf_init.h  adf_io_bundles.h  adf_io_cfg.h  adf_io_ring.h  adf_io_user_proxy.h  adf_platform.h  adf_platform_acceldev_common.h  adf_platform_acceldev_gen4.h  adf_platform_common.h  adf_user.h  adf_user_arbiter.h  adf_user_cfg.h  adf_user_init.h  adf_user_ring.h  adf_user_transport.h  icp_platform.h  icp_platform_user.h
quickassist/lookaside/access_layer/src/qat_direct/io/: adf_process_proxy.c  adf_user_ETring_mgr_dp.c  adf_user_cfg.c  adf_user_device.c  adf_user_init.c  adf_user_ring.c  adf_user_transport_ctrl.c
quickassist/lookaside/access_layer/src/qat_direct/vfio/: adf_pfvf_msg.h  adf_pfvf_proto.c  adf_pfvf_proto.h  adf_pfvf_vf_msg.c  adf_pfvf_vf_msg.h  adf_vfio_cfg.c  adf_vfio_pf.c  adf_vfio_pf.h  adf_vfio_ring.c  adf_vfio_user_bundles.c  adf_vfio_user_proxy.c  qat_log.c  qat_log.h  qat_mgr.h  qat_mgr_client.c  qat_mgr_lib.c  vfio_lib.c  vfio_lib.h
quickassist/lookaside/access_layer/src/sample_code/: README.txt
quickassist/lookaside/access_layer/src/sample_code/busy_loop/: busy_loop.c  busy_loop.h
quickassist/lookaside/access_layer/src/sample_code/fips/: Doxyfile  cpa_fips_sample.h  cpa_fips_sample_aes_gcm.c  cpa_fips_sample_aes_gcm.h  cpa_fips_sample_dsa.c  cpa_fips_sample_dsa.h  cpa_fips_sample_ecdsa.c  cpa_fips_sample_ecdsa.h  cpa_fips_sample_rsa.c  cpa_fips_sample_rsa.h  cpa_fips_sample_utils.c  cpa_fips_sample_utils.h
quickassist/lookaside/access_layer/src/sample_code/performance/: cpa_sample_code_main.c
quickassist/lookaside/access_layer/src/user/: sal_user.c  sal_user_congestion_mgmt.c  sal_user_dyn_instance.c
quickassist/lookaside/firmware/include/: icp_qat_fw.h  icp_qat_fw_comp.h  icp_qat_fw_dc_chain.h  icp_qat_fw_init_admin.h  icp_qat_fw_kpt_ksp.h  icp_qat_fw_la.h  icp_qat_fw_mmp.h  icp_qat_fw_mmp_ids.h  icp_qat_fw_pke.h  icp_qat_hw.h  icp_qat_hw_20_comp.h  icp_qat_hw_20_comp_defs.h
quickassist/utilities/libusdm_drv/: qae_mem.h
quickassist/utilities/libusdm_drv/include/: qae_mem_utils.h
quickassist/utilities/libusdm_drv/user_space/: qae_mem_common.c  qae_mem_hugepage_utils.c  qae_mem_hugepage_utils.h  qae_mem_lib_utils.h  qae_mem_multi_thread.h  qae_mem_multi_thread_utils.c  qae_mem_user_utils.h  qae_mem_utils.c  qae_mem_utils_common.c  qae_mem_utils_common.h  qae_page_table.h  qae_page_table_common.h  qae_page_table_defs.h
quickassist/utilities/libusdm_drv/user_space/vfio/: qae_mem_hugepage_utils_vfio.c  qae_mem_utils_vfio.c
quickassist/utilities/osal/include/: Osal.h  OsalDevDrvCommon.h  OsalTypes.h
quickassist/utilities/osal/src/linux/user_space/: OsalAtomic.c  OsalCryptoInterface.c  OsalMutex.c  OsalSemaphore.c  OsalServices.c  OsalSpinLock.c  OsalThread.c  OsalUsrKrnProxy.c
quickassist/utilities/qat_mgr/: qat_mgr.c
quickassist/utilities/service/: 99-qat-vfio.rules.in  qat  qat.service.in  qat_init.sh  qat_init.sh.in
(+277 files in other folders)
